Moa 0.11.2 / 2012-10-15
==========================

  * some code cleanup
  * improved installer (that might even work)

Moa 0.11.1 / 2012-10-14
==========================

  * lots of (pep8) cleanup
  * git repositories as templates
  * reworked templates/providers
  * new moa.cli for all CLI code
  * allowing a default title
  * fixed a few unittests
  * started using pelican for static website generation - in progress
  * reworked changelogs & blog messages - now stored in ./doc/*
  * better openlava actor
  * Not using os.getcwd - prevent dereferencing of symlinks
  * uses TTYtter to send tweets
  * better autogenerated changelog messages
  * writes exec scripts to ./.moa/tmp now - easier to track
  * retains title when running moa new
  * better plugin structure - distinguish between job & system plugins
  * start drawing images of moa workflows
  * track versioning
  * moved `fileset` code to the core
  * moa mv now works
  * new argparse structure - better command line interface
  * remoteLogger logs to mysql

Moa 0.10.15 / 2012-01-30
==========================

  * slightly updated docs
  * allow specific execution of one plugin in the plugin manager
  * Defined _pref _next _first _last metavars
  * meta variables are now defined in this separate plugin
  * added history & bash_histroy to moaFiles
  * new version of docs
  * removed 'import git'
  * check for absence of local_bash_history before touching
  * only touch .moa/local_bash_history if .moa is present & writable

Moa 0.10.14 / 2012-01-11
==========================

  * added a few map derivates (map2, map22)
  * moa.ui prompt now expands paths starting with /
  * plugin to maintain project data ( {{_p}} )
  * make sure the pluginOrder is copied before sorting - otherwise order is messed up
  * safeguard for unsolvable configurations
  * cleaned the order of execution a little bit - added prePrepare and postFinish
  * do not run the git_finish_* hook if not in a git repository